[package]
name = "kube-checker"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.65.0", features = ["runtime","derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_18"] }
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3.19"
tabled = "0.4.2"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "3.1.8", features = ["derive"] }